--- a/Fundraising/wwwroot/ProductPage/product.html
+++ b/Fundraising/wwwroot/ProductPage/product.html
@@ -93,10 +93,10 @@
                             <a class="nav-link" href="./product.html"><span style="font-size:18px">專案內容</span></a>
                         </li>
                         <li class="nav-item" style="padding-left:80px">
-                            <a class="nav-link" href="./faq.html"><span style="font-size:18px">常見問題</span></a>
+                            <a class="nav-link" href="./faq.html"><span style="font-size:18px">常見問題 {{tolfaq}}</span></a>
                         </li>
                         <li class="nav-item" style="padding-left:80px">
-                            <a class="nav-link" href="./comments.html"><span style="font-size:18px">留言</span></a>
+                            <a class="nav-link" href="./comments.html"><span style="font-size:18px">留言 {{tolcomment}}</span></a>
                         </li>
                     </ul>
                     <div class="col-sm-4" style="padding-left: 50px">
@@ -164,7 +164,9 @@
                 planList: [],
                 followList: 0,
                 addfollowList: {},
-                whouser: ''
+                whouser: '',
+                tolcomment: 0,
+                tolfaq:0
 
             },
             mounted: function () {
@@ -204,6 +206,30 @@
                         app.followList = parseInt(e)
                         console.log(e);
                         console.log(555);
+                    },
+                    error: function (e) {
+                        /*     console.log(app.followList);*/
+                        console.log(e);
+                        console.log(444);
+                    }
+                })
+                $.ajax({
+                    type: 'Get',
+                    url: '/api/SiFollowings/tolcomment/' + sessionStorage.getItem("productId"),
+                    success: function (e) {
+                        app.tolcomment = parseInt(e);
+                    },
+                    error: function (e) {
+                        /*     console.log(app.followList);*/
+                        console.log(e);
+                        console.log(444);
+                    }
+                })
+                $.ajax({
+                    type: 'Get',
+                    url: '/api/SiFollowings/tolfaq/' + sessionStorage.getItem("productId"),
+                    success: function (e) {
+                        app.tolfaq = parseInt(e);
                     },
                     error: function (e) {
                         /*     console.log(app.followList);*/
