--- a/Fundraising/wwwroot/CMS/index.html
+++ b/Fundraising/wwwroot/CMS/index.html
@@ -41,7 +41,7 @@
                 <div class="row justify-content-center">
                     <!-- 側邊欄位 -->
 
-                    <ul class="navbar-nav bg-white col-2 item-style sidebar " id="accordionSidebar">
+                    <ul class="navbar-nav bg-white col-2 item-style sidebar " id="accordionSidebar" style="overflow-x: auto;max-height: 750px;">
                         <br>
                         <div id="mysider"></div>
                     </ul>
