--- a/Fundraising/wwwroot/CMS/Odetails.html
+++ b/Fundraising/wwwroot/CMS/Odetails.html
@@ -61,38 +61,38 @@
                                         <table class="table mb-0">
                                             <thead class="thead-dark">
                                                 <tr>
-                                                    <th colspan="6">贊助編號: {{odetailsinfo.orderId}}</th>
+                                                    <th colspan="6" class="h3 p-2">贊助編號: <span v-cloak style="color:white">{{odetailsinfo.orderId}}</span></th>
                                                 </tr>
                                             </thead>
                                             <tbody>
                                                 <tr>
                                                     <td>會員名稱:</td>
-                                                    <td>
-                                                        <p>{{odetailsinfo.recipientName}}</p>
+                                                    <td v-cloak>
+                                                        {{odetailsinfo.recipientName}}
                                                     </td>
                                                     <td>贊助日期:</td>
-                                                    <td>
-                                                        <p>{{odetailsinfo.purchaseTime}}</p>
+                                                    <td v-cloak>
+                                                        {{odetailsinfo.purchaseTime}}
                                                     </td>
                                                 </tr>
                                                 <tr>
                                                     <td>手機:</td>
-                                                    <td>
-                                                        <p>{{odetailsinfo.recipientPhone}}</p>
+                                                    <td v-cloak>
+                                                        {{odetailsinfo.recipientPhone}}
                                                     </td>
                                                     <td>信箱:</td>
-                                                    <td>
-                                                        <p>{{odetailsinfo.recipientMail}}</p>
+                                                    <td v-cloak>
+                                                        {{odetailsinfo.recipientMail}}</p>
                                                     </td>
                                                 </tr>
                                                 <tr>
                                                     <td>信用卡號:</td>
-                                                    <td>
-                                                        <p>{{odetailsinfo.masterCardId}}</p>
+                                                    <td v-cloak>
+                                                        {{odetailsinfo.masterCardId}}
                                                     </td>
                                                     <td>送貨地址:</td>
-                                                    <td colspan="3">
-                                                        <p>{{odetailsinfo.recipientAddress}}</p>
+                                                    <td colspan="3" v-cloak>
+                                                        {{odetailsinfo.recipientAddress}}
                                                     </td>
                                                 </tr>
 
@@ -109,12 +109,12 @@
                                             <div class="col-8">
                                                 <div class="row">
                                                     <div class="col-12">
-                                                        <h3>{{odetailsinfo.planTitle}}</h3>
+                                                        <h3 v-cloak>{{odetailsinfo.planTitle}}</h3>
                                                     </div>
                                                     <div class="col-12 mb-3">
                                                         選擇的贊助內容
                                                     </div>
-                                                    <div class="col-7">{{odetailsinfo.planContent}}</div>
+                                                    <div class="col-7" v-cloak>{{odetailsinfo.planContent}}</div>
                                                     <div class="col-2  pr-3">
                                                         <div>方案金額: </div>
                                                         <div class="mb-1">加碼贊助: </div>
@@ -126,8 +126,8 @@
                                                         <div style="font-size: 1.3rem;">NT$</div>
                                                     </div>
                                                     <div class=" text-right p-0">
-                                                        <div>{{odetailsinfo.planPrice}}</div>
-                                                        <div class="mb-1">{{odetailsinfo.addSponsorship}} </div>
+                                                        <div v-cloak>{{odetailsinfo.planPrice}}</div>
+                                                        <div class="mb-1" v-cloak>{{odetailsinfo.addSponsorship}} </div>
                                                         <div style="font-size: 1.3rem;">{{odetailsinfo.planPrice +
                                                             odetailsinfo.addSponsorship}}</div>
                                                     </div>
