--- a/Fundraising/wwwroot/CMS/checkrefund.html
+++ b/Fundraising/wwwroot/CMS/checkrefund.html
@@ -60,39 +60,39 @@
                                             <table class="table mb-0">
                                                 <thead class="thead-dark">
                                                     <tr>
-                                                        <th colspan="6" class="h3 p-2">贊助編號: <span v-cloak>{{odetailsinfo.orderId}}</span>
+                                                        <th colspan="6" class="h3 p-2">贊助編號: <span v-cloak style="color:white">{{odetailsinfo.orderId}}</span>
                                                         </th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
                                                     <tr>
                                                         <td>會員名稱:</td>
-                                                        <td>
-                                                            <p v-cloak>{{odetailsinfo.recipientName}}</p>
+                                                        <td v-cloak>
+                                                           {{odetailsinfo.recipientName}}
                                                         </td>
                                                         <td>贊助日期:</td>
-                                                        <td>
-                                                            <p v-cloak>{{odetailsinfo.purchaseTime}}</p>
+                                                        <td v-cloak>
+                                                          {{odetailsinfo.purchaseTime}}
                                                         </td>
                                                     </tr>
                                                     <tr>
                                                         <td>手機:</td>
-                                                        <td>
-                                                            <p v-cloak>{{odetailsinfo.recipientPhone}}</p>
+                                                        <td v-cloak>
+                                                            {{odetailsinfo.recipientPhone}}
                                                         </td>
                                                         <td>信箱:</td>
-                                                        <td>
-                                                            <p v-cloak>{{odetailsinfo.recipientMail}}</p>
+                                                        <td v-cloak>
+                                                            {{odetailsinfo.recipientMail}}
                                                         </td>
                                                     </tr>
                                                     <tr>
                                                         <td>信用卡號:</td>
-                                                        <td>
-                                                            <p v-cloak>{{odetailsinfo.masterCardId}}</p>
+                                                        <td v-cloak>
+                                                           {{odetailsinfo.masterCardId}}
                                                         </td>
                                                         <td>送貨地址:</td>
-                                                        <td colspan="3">
-                                                            <p v-cloak>{{odetailsinfo.recipientAddress}}</p>
+                                                        <td colspan="3" v-cloak>
+                                                            {{odetailsinfo.recipientAddress}}
                                                         </td>
                                                     </tr>
                                                     <tr>
