--- a/Fundraising/wwwroot/CMS/profile.html
+++ b/Fundraising/wwwroot/CMS/profile.html
@@ -27,8 +27,8 @@
     <script src="./js/logincheck.js"></script>
 
     <style>
-        #myImg:hover #myImgInput{
-             display: block;
+        #myImg:hover #myImgInput {
+            display: block;
         }
     </style>
 </head>
@@ -63,40 +63,45 @@
                                         <form class=""></form>
                                         <div class="row justify-content-around">
                                             <div class="col-5 ">
-                                                <div class="text-center" style="position: relative;">
-                                                <img :src="employeeinfo.employeephoto" alt=""
-                                                    style="height: 150px; width: 150px; border: 1px silver solid ;border-radius: 50%;"
-                                                    class="d-block mx-auto imgset" id="myImg" >
-                                                    <input type="file" name="" id="myImgInput" class="py-3"
-                                                    v-on:change="readURL"
-                                                        accept="image/jpeg,image/png" style="max-width: 80px; position: absolute;
-                                                        top: 50%;  
-                                                        left: 50%;
-                                                        transform: translate(-50%, 30%);
-                                                        display: none;">
+                                                <div class="text-center " style="">
+                                                    <label for="myImgInput" class="btn p-0" style="border-radius: 50%;">
+                                                        <img :src="employeeinfo.employeephoto" alt=""
+                                                            style="height: 150px; width: 150px; border: 1px silver solid ;border-radius: 50%;"
+                                                            class="d-block mx-auto imgset " id="myImg"></label> <br>
+                                                    <!-- <label for="myImgInput" class="btn"
+                                                        style="height: 150px; width: 150px; border: 1px silver solid ;border-radius: 50%; position: absolute; top: 0px; left: 50%; transform: translate(-50%, 0%); display: none"> <p><i class="fa-camera"></i></p>  </label> -->
+                                                    <input type="file" name="" id="myImgInput" class="pb-3"
+                                                        v-on:change="readURL" accept="image/jpeg,image/png"
+                                                        style="max-width: 80px;">
                                                 </div>
-                                                <h3 class="p-0 text-center">朱小名</h3>
+                                                <h3 class="p-0 text-center" v-cloak>{{newemployeeinfo.name}}</h3>
                                                 <label for="">帳號:</label> <br>
-                                                <input type="text" name="" id="" class="w-100"> <br>
+                                                <input type="text" name="" id="" class="w-100" disabled
+                                                    v-model="newemployeeinfo.account"> <br>
                                                 <label for="">密碼:</label> <br>
-                                                <input type="text" name="" id="" class="w-100">
+                                                <input type="password" name="" id="" class="w-100"
+                                                    v-model="newemployeeinfo.password">
                                             </div>
                                             <div class="col-5 d-flex flex-column justify-content-end">
                                                 <label for="">Email</label>
-                                                <input type="text" class="w-100">
+                                                <input type="text" class="w-100" v-model="newemployeeinfo.email">
                                                 <label for="">電話</label>
-                                                <input type="text" class="w-100">
+                                                <input type="text" class="w-100" v-model="newemployeeinfo.phone">
                                                 <label for="">性別</label>
-                                                <input type="text" class="w-100">
+                                                <input type="text" class="w-100" disabled
+                                                    v-model="newemployeeinfo.sexy">
                                                 <label for="">職位</label>
-                                                <input type="text" class="w-100">
+                                                <input type="text" class="w-100" disabled
+                                                    v-model="newemployeeinfo.position">
                                                 <label for="">在職狀態</label>
-                                                <input type="text" class="w-100">
+                                                <input type="text" class="w-100" disabled
+                                                    v-model="newemployeeinfo.status">
                                             </div>
 
 
                                             <div class="col-12 text-center mt-3">
-                                                <button name="submit" type="submit" class="btn btn-primary px-5 ">
+                                                <button name="submit" type="submit" class="btn btn-primary px-5 "
+                                                    v-on:click="updataprofile">
                                                     提交
                                                 </button>
                                             </div>
@@ -154,14 +159,6 @@
                     // alert("1523 ")
                     axios.get("/api/back/logout").then(res => { if (res.data == "已登出") { window.location.reload() } })
                 },
-                getuserinfo: function (index) {
-                    // console.log(index)
-                    axios.get(`/api/users/${index}`)
-                        .then((response) => {
-                            this.userinfo = response.data
-                            this.userinfo.userBirthday = this.userinfo.userBirthday.substr(0, 10)
-                        })
-                },
                 readURL(event) {
                     if (event.target.files && event.target.files[0]) {
                         var reader = new FileReader();
@@ -171,7 +168,57 @@
                         reader.readAsDataURL(event.target.files[0]);
                     }
                 },
+                updataprofile() {
+                    axios.get(`/api/Employees/${getCookie("employeeId")}`).then(res => {
+                        var profiledata = res.data
+                        profiledata.email = this.employeeinfo.email
+                        profiledata.phone = this.employeeinfo.phone
+                        profiledata.employeephoto = this.employeeinfo.employeephoto
+                        profiledata.password = this.employeeinfo.password
+                        // console.log("profiledata" + profiledata)
+                        axios.put(`/api/Employees/${this.employeeinfo.employeeId}`, profiledata).then(res => {
+                            console.log(res)
+                        })
+                    })
+                }
 
+            },
+            computed: {
+                newemployeeinfo() {
+                    var newemployeeinfo = this.employeeinfo;
+                    switch (this.employeeinfo.position) {
+                        case 1:
+                            newemployeeinfo.position = "主管"
+                            break;
+                        case 2:
+                            newemployeeinfo.position = "行政人員"
+                            break;
+                        case 3:
+                            newemployeeinfo.position = "會計人員"
+                            break;
+                        case 4:
+                            newemployeeinfo.position = "人事HR"
+                            break;
+                        default:
+                            break;
+                    };
+                    switch (this.employeeinfo.status) {
+                        case 1:
+                            newemployeeinfo.status = "在職"
+                            break;
+                        case 2:
+                            newemployeeinfo.position = "離職"
+                            break;
+                        case 3:
+                            newemployeeinfo.position = "留職停薪"
+                            break;
+                    };
+                    (newemployeeinfo.sexy == true) ? newemployeeinfo.sexy = "男" : newemployeeinfo.sexy = "女";
+
+
+                    return newemployeeinfo
+
+                }
             },
             mounted() {
                 let loader = this.$loading.show({
