員工篩選待完成

--- a/Fundraising/wwwroot/CMS/profile.html
+++ b/Fundraising/wwwroot/CMS/profile.html
@@ -178,6 +178,7 @@
                         // console.log("profiledata" + profiledata)
                         axios.put(`/api/Employees/${this.employeeinfo.employeeId}`, profiledata).then(res => {
                             console.log(res)
+                            window.location.reload();
                         })
                     })
                 }
