--- a/Fundraising/wwwroot/ProductPage/product.html
+++ b/Fundraising/wwwroot/ProductPage/product.html
@@ -15,7 +15,7 @@
     <script src="microsoft.cognitiveservices.speech.sdk.bundle.js"></script>
     <style>
         .divhtml img {
-            width: 100%
+            width: 100% !important
         }
     </style>
 </head>
