--- a/Fundraising/wwwroot/ProductPage/filter.html
+++ b/Fundraising/wwwroot/ProductPage/filter.html
@@ -70,7 +70,12 @@
 
         .selectedimgdiv {
             width: 100%;
-            height: 214px;
+            height:auto;
+        }
+
+        .selectedimgdiv img {
+            width: 100% !important;
+            height: auto !important;
         }
     </style>
 
